Preserve local spectator profile identity